--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,12 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta
-      name="Digital Business Card"
+      name="Travel Journal"
       content="Web site created using create-react-app"
     />
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <title>Digital Business Card</title>
+    <title>Travel Journal</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
